cluster-talos/kubernetes/apps/sonarr/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sonarr
  labels:
    k10.kasten.io/backup: "true"
    storage-class: vsphere
